# minigames

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
docs/: roadmap.md
docs/adr/: 0001-macroquad-for-2d-era.md  0002-naming-and-ip-policy.md  0003-code-drawn-visuals.md  0004-space-invaders-ip-recheck.md
docs/agents/: issue-tracker.md
games/breakout/: README.md  RIFT.md
games/breakout/core/: Cargo.toml
games/breakout/core/src/: lib.rs
games/breakout/core/tests/: ball.rs  bricks.rs  difficulty.rs  paddle.rs  walls.rs
games/breakout/remix-core/: Cargo.toml
games/breakout/remix-core/src/: lib.rs  meta.rs
games/breakout/remix-core/tests/: ball.rs  bricks.rs  determinism.rs  paddle.rs  walls.rs
games/breakout/remix-core/tests/common/: mod.rs
games/breakout/shell/: Cargo.toml
games/breakout/shell/examples/: canvas_shot.rs  rift_shot.rs
games/breakout/shell/src/: app.rs  audio.rs  fx.rs  lib.rs  main.rs  render.rs  rift.rs
games/breakout/storage/: Cargo.toml
games/breakout/storage/src/: lib.rs
games/invaders/core/: Cargo.toml
games/invaders/core/src/: lib.rs
games/invaders/core/tests/: cannon.rs  determinism.rs  formation.rs
games/invaders/core/tests/common/: mod.rs
games/pong/: PULSE.md  README.md
games/pong/core/: Cargo.toml
games/pong/core/src/: lib.rs
games/pong/core/tests/: ball.rs  determinism.rs  opponent.rs  paddles.rs  rally.rs  scoring.rs
games/pong/core/tests/common/: mod.rs
games/pong/remix-core/: Cargo.toml
games/pong/remix-core/src/: lib.rs
games/pong/remix-core/tests/: determinism.rs  duel.rs  gauntlet.rs  multiball.rs  opponent.rs  pickups.rs  power.rs  spin.rs  versus.rs
games/pong/remix-core/tests/common/: mod.rs
games/pong/shell/: Cargo.toml
games/pong/shell/examples/: canvas_shot.rs
games/pong/shell/src/: app.rs  audio.rs  font.rs  fx.rs  lib.rs  main.rs  render.rs
games/pong/storage/: Cargo.toml
games/pong/storage/src/: lib.rs
games/stepfall/: README.md
games/stepfall/core/: Cargo.toml
games/stepfall/core/src/: lib.rs
games/stepfall/core/tests/: bunkers.rs  cannon.rs  combat.rs  determinism.rs  formation.rs  scoring.rs  waves.rs
games/stepfall/core/tests/common/: mod.rs
games/stepfall/remix-core/: Cargo.toml
games/stepfall/remix-core/src/: lib.rs
games/stepfall/shell/: Cargo.toml
games/stepfall/shell/examples/: canvas_shot.rs
games/stepfall/shell/src/: app.rs  audio.rs  lib.rs  main.rs  render.rs  sprites.rs
scripts/: build-web.sh
shell-kit/: Cargo.toml
shell-kit/src/: font.rs  lib.rs  screen.rs  synth.rs  timestep.rs
web/: index.html
web/breakout/: index.html
web/pong/: index.html
web/stepfall/: index.html
